# FinalProject

./: .gitignore  README.md  check_steering_radii.py  main.py  pyproject.toml  requirements.txt
configs/: abu_dhabi.yaml  austin.yaml  australia.yaml  austria.yaml  bahrain.yaml  baku.yaml  barcelona.yaml  base.yaml  brazil.yaml  canada.yaml  china.yaml  hungary.yaml  imola.yaml  jeddah.yaml  mexico.yaml  miami.yaml  monaco.yaml  monza.yaml  obs_a.yaml  obs_b.yaml  obs_c.yaml  qatar.yaml  silverstone.yaml  singapore.yaml  spa.yaml  suzuka.yaml  suzuka_full.yaml  vegas.yaml  zandvoort.yaml
scripts/: analyse_experiment.py  animate.py  baseline_centreline.py  compare_runs.py  evaluate.py  run_baseline.py  run_experiment.py  train.py  train_ppo.py
src/racing_rl/: __init__.py
src/racing_rl/config/: __init__.py  loader.py  schema.py
src/racing_rl/evaluation/: __init__.py  best_tracker.py  evaluator.py
src/racing_rl/observations/: __init__.py  builder.py
src/racing_rl/physics/: __init__.py  vehicle.py
src/racing_rl/plotting/: __init__.py  animation.py  track_plot.py  wheel_asset.py
src/racing_rl/rewards/: __init__.py  reward.py
src/racing_rl/tracks/: __init__.py  base.py  geojson_loader.py  parametric.py
src/racing_rl/training/: __init__.py  callbacks.py  trainer.py
src/racing_rl/utils/: __init__.py  logging_utils.py  path_utils.py
tests/: conftest.py  test_best_tracker.py  test_env.py  test_observations.py  test_physics.py  test_rewards.py  test_track.py
